--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="keywords" content="Web3, Blockchain, Solidity, DeFi, Smart Contracts, Monad, Ethereum, Developer" />
 
     <meta property="og:title" content="Johan - Web3 Developer & Blockchain Engineer" />
-    <meta property="og:description" content="Personal website of Johan, a passionate Web3 developer building the future of decentralized applications." />
+    <meta property="og:description" content="Hey frens, I’m part of the Monad community and I put this site together to make things easier for newcomers. Here you’ll find simple guides on how to get roles, join in on the fun, and explore different dApps in the Monad ecosystem. I’m learning and building along with you, so think of this as a space where we grow together." />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
