--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Johan - Web3 Developer & Blockchain Engineer</title>
+    <title>Johan - Sarmiento </title>
     <meta name="description" content="Hey frens, I’m part of the Monad community and I put this site together to make things easier for newcomers. Here you’ll find simple guides on how to get roles, join in on the fun, and explore different dApps in the Monad ecosystem. I’m learning and building along with you, so think of this as a space where we grow together." />
     <meta name="author" content="Johan" />
     <meta name="keywords" content="Web3, Blockchain, Solidity, DeFi, Smart Contracts, Monad, Ethereum, Developer" />
